# Neuronix

./: .gitignore  CMakeLists.txt  README.md  emnist_train_log.txt  lenet_mnist.nnx
.github/workflows/: build.yml
benchmarks/: benchmark_placeholder.cpp
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  ROADMAP.md
examples/: cifar10_resnet.cpp  cifar10_train.cpp  emnist_train.cpp  face_classify.cpp  hello_neuronix.cpp  infer.cpp  lenet_mnist.cpp  mnist_train.cpp  sentiment_train.cpp
include/neuronix/: neuronix.hpp  version.hpp
include/neuronix/activations/: dropout.hpp  gelu.hpp  leaky_relu.hpp  relu.hpp  sigmoid.hpp  softmax.hpp  tanh_activation.hpp
include/neuronix/core/: matrix.hpp  tensor.hpp
include/neuronix/data/: data_loader.hpp  mnist_loader.hpp
include/neuronix/layers/: batch_norm.hpp  conv2d.hpp  dense.hpp  embedding.hpp  flatten.hpp  layer.hpp  lstm.hpp  max_pool2d.hpp  residual_block.hpp
include/neuronix/losses/: cross_entropy_loss.hpp  loss.hpp  mse_loss.hpp
include/neuronix/metrics/: accuracy.hpp
include/neuronix/models/: model.hpp
include/neuronix/optimizers/: adam.hpp  adamw.hpp  lr_scheduler.hpp  sgd.hpp
scripts/: infer.py  prepare_emnist.py  prepare_imdb.py  prepare_lfw.py
src/: neuronix.cpp
src/activations/: softmax.cpp
src/core/: matrix.cpp  rng_impl.hpp  tensor.cpp
src/data/: data_loader.cpp  mnist_loader.cpp
src/layers/: batch_norm.cpp  conv2d.cpp  dense.cpp  embedding.cpp  lstm.cpp  residual_block.cpp
src/losses/: cross_entropy_loss.cpp  mse_loss.cpp
src/metrics/: accuracy.cpp
src/models/: model.cpp
tests/: activation_tests.cpp  backprop_tests.cpp  batchnorm_tests.cpp  conv_tests.cpp  data_tests.cpp  dense_tests.cpp  dropout_tests.cpp  flatten_tests.cpp  loss_tests.cpp  matrix_tests.cpp  model_io_tests.cpp  model_tests.cpp  optimizer_tests.cpp  scheduler_tests.cpp  smoke_test.cpp  tensor_tests.cpp  training_tests.cpp
